SET(ZORBATYPES_SRCS 
  decimal.cpp
  floatimpl.cpp
  integer.cpp
  numconversions.cpp
  utf8/xqpString.cpp
  utf8/Unicode_util.cpp)
  
ADD_SRC_SUBFOLDER(ZORBATYPES_SRCS mapm     MAPM_SRCS)
ADD_SRC_SUBFOLDER(ZORBATYPES_SRCS datetime DATETIME_SRCS)

IF (MSVC)
  ADD_LIBRARY(zorbatypes ${ZORBATYPES_SRCS})
ELSE (MSVC)
  ADD_LIBRARY(zorbatypes SHARED ${ZORBATYPES_SRCS})
ENDIF (MSVC)
TARGET_LINK_LIBRARIES(zorbatypes ${requiredlibs_types} )
SET_TARGET_PROPERTIES(zorbatypes PROPERTIES VERSION ${ZORBA_MAJOR_NUMBER}.${ZORBA_MINOR_NUMBER}.${ZORBA_PATCH_NUMBER})
SET_TARGET_PROPERTIES(zorbatypes PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET(ZORBA_LIBRARY_INSTALL_LIST zorbatypes)
